--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ capybara-*.html
 /log
 /tmp
 /db/*.sqlite3
+/script/freegeoip_db/ipdb.sqlite
+/script/freegeoip_db/*.csv
 /public/system
 /coverage/
 /spec/tmp
