--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,8 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: UTF8
+  database: geoip
+  port: 5432
+  username: run-gp
